examples/test/testpolicy8953.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8953
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key46: value35
      key9: value14
      key7: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value16
          key8: value45
      podSelector:
        matchLabels:
          key6: value27
